--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   minicron:
-    image: jamesrwhite/minicron:v0.9.7
+    build: .
     container_name: minicron
     volumes:
       - ./config:/etc/minicron:Z
@@ -13,8 +13,6 @@ services:
       - cronnetwork
     ports:
       - "9292:9292"
-      - "9222:22"
-
 
 networks:
   cronnetwork:
