--- a/config/minicron.toml
+++ b/config/minicron.toml
@@ -8,9 +8,9 @@ debug = false # Useful for debugging
 [client]
   [client.server]
   scheme = "http" # [http, https]
-  host = "127.0.0.1"
-  username = "username" # optional for basic auth
-  password = "password" # optional for basic auth
+  host = "0.0.0.0"
+  #username = "username" # optional for basic auth
+  #password = "password" # optional for basic auth
   port = 9292
   path = "/"
   connect_timeout = 5
@@ -22,14 +22,14 @@ debug = false # Useful for debugging
 
 # Server options
 [server]
-host = "127.0.0.1"
+host = "0.0.0.0"
 port = 9292
 path = "/"
 pid_file = "/tmp/minicron.pid"
-timezone = "UTC"
+timezone = "Asia/Bangkok"
   [server.session]
   name = "minicron.session"
-  domain = "127.0.0.1"
+  domain = "0.0.0.0"
   path = "/"
   ttl = 86400
   secret = "change_me"
